--- a/scss/partials/_banner.scss
+++ b/scss/partials/_banner.scss
@@ -13,10 +13,10 @@
     background-size: cover;
     @include light{
        
-        background-image: url(../../images/bbbbbbbbbbb4light-min.jpg);
+        background-image: url('../../images/bbbbbbbbbbb4light-min.jpg');
         
     }    
-    background-image: url(../../images/bbbbbbbbbbb4-min.jpg);
+    background-image: url('../../images/bbbbbbbbbbb4-min.jpg');
    // background-position: center;
     //background-position-x: 50%;
     
