--- a/scss/partials/_banner.scss
+++ b/scss/partials/_banner.scss
@@ -13,7 +13,7 @@
     background-size: cover;
     @include light{
        
-        background-image: url(/images/bbbbbbbbbbb4light-min.jpg);
+        background-image: url(../images/bbbbbbbbbbb4light-min.jpg);
         
     }    
     background-image: url(/images/bbbbbbbbbbb4-min.jpg);
