banner style added

--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -1,3 +1,5 @@
 $color-reset: #fff;
-$color-primary: #0090c5; // kolor niebieski, w przyciskach
+$color-primary: #4c5454; // główny kolor czcionki oraz w przyciskach
 $color-light: #f1f1f1; // jasnoszary, np na przycisku
+$color-hover: #ff907f; // efekt hover
+$color-slider: rgb(124, 100, 73); // kolor na slider #1
