--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -5,13 +5,9 @@
     z-index: 100;
     width: 100%;
 }
-
 .navbar {
     display: none;
-    
-    @include tablet_land{
-        
-
+    @include tablet_wide{
         padding: 0px 36px 0px 36px;
         font-size: 16px;
         display: flex;
@@ -20,13 +16,11 @@
         background-color: rgba(248,245,240,0.2);
     }    
 }
-
 .navbar__social{
-    background-color: papayawhip;
+    //background-color: papayawhip;
     height: 100%;
-    display: inline-block;
+    margin: auto;
 }
-
 .nav-list {
     height: 100%;
     margin: auto; 
@@ -47,7 +41,6 @@
             display: block;
             height: 50%;
         }
-
         &::after {
             content: '';
             display: block;
@@ -58,10 +51,8 @@
         }
     }  
 }
-
 .logo-container {
-    padding: 18px;
-    
+    padding: 18px; 
     .logo-image {
         height: 100px;
         width: 100px;
@@ -69,25 +60,19 @@
             width: auto;
             height: 100%;
             display: block;
-            margin: auto; 
-                      
-        }   
+            margin: auto;        
+        }
     }
     .logo-image--mobile{
         display: none;
     }
 }
-
-
 .navbar__main {
     display: flex;
     justify-content: center;
     width: 90%; 
     //background-color: palegreen;
-
 }
-
-
 .navbar-mobile {
     display: flex;
     //background-color: peru;
@@ -95,7 +80,7 @@
     .logo-image--mobile{
         display: inline-block;
         height: 75px;
-         width: 75px;
+        width: 75px;
     }
     .hamburger-trigger{
         cursor: pointer;
@@ -103,7 +88,6 @@
         border-radius: 6px;
         position: relative;
         background: transparent;
-            
         .lines{
             position: relative;
             display: inline-block;
@@ -129,10 +113,7 @@
     .lines::before {
         top: -6px;
     }
-    @include tablet_land{
+    @include tablet_wide{
         display: none;
     }
-    
 }
-
-
